--- a/src/main/resources/assets/noplacenearportal/lang/ru_ru.json
+++ b/src/main/resources/assets/noplacenearportal/lang/ru_ru.json
@@ -1,4 +1,7 @@
 {
   "key.noplacenearportal.toggle": "Вкл/Вык ограничение",
-  "category.noplacenearportal.general": "Блок портала спасён"
+  "category.noplacenearportal.general": "No Place Near Portal",
+  "noplacenearportal.message": "Блок портала спасён!",
+  "noplacenearportal.switch.enabled": "Защита портала: вкл",
+  "noplacenearportal.switch.disabled": "Защита портала: выкл"
 }
